--- a/my_hotel_website/index.html
+++ b/my_hotel_website/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the most extraordinary hotel in Spokane, WA.">
     <meta name="keywords" content="hotel,spokane hotel,inland northwest hotel">
+    <script src="https://kit.fontawesome.com/7e7d4caab5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel BT | Welcome</title>
 </head>
@@ -22,7 +23,71 @@
                 </ul>
             </div>
         </nav>
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class="text-primary">Enjoy </span>Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quos, quae voluptate
+                        ullam
+                        sapiente provident.</p>
+                    <a class="btn" href="about.html">About Our Hotel</a>
+
+
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, laudantium amet tempora magnam quos
+                autem recusandae, ipsam sequi perspiciatis explicabo nostrum quaerat deserunt provident nemo obcaecati
+                aut odio, soluta nisi culpa eligendi. Odit mollitia temporibus maiores itaque animi obcaecati velit.</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+
+
+        </div>
+
+
+    </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, maxime!</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, maxime!</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, maxime!</p>
+
+        </div>
+
+
+
+    </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2019, All Rights Reserved </p>
+
+
+    </footer>
 
 </body>
 
