--- a/my_hotel_website/index.html
+++ b/my_hotel_website/index.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="hotel,spokane hotel,inland northwest hotel">
     <script src="https://kit.fontawesome.com/7e7d4caab5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>Hotel BT | Welcome</title>
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+    <title>Hotel BT | Welcome </title>
 </head>
 
 <body>
@@ -20,6 +21,7 @@
                     <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+
                 </ul>
             </div>
         </nav>
