--- a/my_hotel_website/about.html
+++ b/my_hotel_website/about.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Welcome to the most extraordinary hotel in Spokane, WA.">
     <meta name="keywords" content="hotel,spokane hotel,inland northwest hotel">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+
     <title>Hotel BT | About</title>
 </head>
 
