--- a/my_hotel_website/contact.html
+++ b/my_hotel_website/contact.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="hotel,spokane hotel,inland northwest hotel">
     <script src="https://kit.fontawesome.com/7e7d4caab5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+
     <title>Hotel BT | About</title>
 </head>
 
